--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <link href="Stylesheets/lake_layout.css" rel="stylesheet" />
     <link href="Stylesheets/lake_styles.css" rel="stylesheet" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Great Lakescape Lodge</title>
   </head>
 
@@ -24,7 +29,7 @@
     </header>
 
     <section id="leftcol">
-      <h1>Welcome</h1>
+      <h1>The Great Lakescape Lodge</h1>
       <img
         src="Images/lake_photo1.png"
         alt="The front desk of the lodge"
